--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
    palworld:
-      image: thijsvanloef/palworld-server-docker:latest
+      build: .
       restart: unless-stopped
       container_name: palworld-server
       ports:
