--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,21 @@ services:
       restart: unless-stopped
       container_name: palworld-server
       ports:
-        - 8211:8211/udp
-        - 27015:27015/udp # Required if you want your server to show up in the community servers tab 
+        - 8211:8211
+        - 27015:27015 # Required if you want your server to show up in the community servers tab 
       environment:
-         - PUID=1000
-         - PGID=1000
+         # - PUID=1000
+         # - PGID=1000
          - PORT=8211 # Optional but recommended
          - PLAYERS=16 # Optional but recommended
-         - SERVER_PASSWORD="worldofpals" # Optional but recommended
          - MULTITHREADING=true
-         - RCON_ENABLED=true
-         - RCON_PORT=25575
-         - TZ=UTC
-         - ADMIN_PASSWORD="adminPasswordHere"
+         # - RCON_ENABLED=true
+         # - RCON_PORT=25575
+         # - TZ=UTC
          - COMMUNITY=false  # Enable this if you want your server to show up in the community servers tab, USE WITH SERVER_PASSWORD!
-         - SERVER_NAME="World of Pals"
+         # - SERVER_PASSWORD="worldofpals" # Optional but recommended
+         # - ADMIN_PASSWORD="adminPasswordHere"
+         # - SERVER_NAME="World of Pals"
       volumes:
-         - ./palworld:/palworld/
+         - ./palworld:C:/palworld/
+
